<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.activity.EditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/kembali" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/btn_kembali"
                android:fontFamily="@font/poppins_bold"
                android:text="Ubah Profile"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/logo4" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/e_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/user"
                android:drawablePadding="16dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/nama_lengkap"
                android:inputType="textCapSentences"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="16dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_edittext"
                android:drawableStart="@drawable/user"
                android:drawablePadding="16dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/e_alamat"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_edittext"
                android:drawablePadding="16dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/alamat"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/blue_tua"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="Simpan"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>